# trajectory_transfer_pytoch

src_common/acin_automation/: CMakeLists.txt  package.xml
src_common/acin_automation/action/: ExecuteScript.action  PlanViews.action
src_common/acin_automation/launch/: automation.launch
src_common/acin_automation/res/: schema.xsd
src_common/acin_automation/scripts/: script_execution_manager
src_common/acin_automation/src/: edge.cpp  edge.h  node.cpp  node.h  sequence_optimizer.cpp  sequence_optimizer.h  vertex.cpp  vertex.h  view_planner.cpp
src_common/acin_automation/srv/: Optimize.srv  Select.srv
src_common/acin_gateway/: CMakeLists.txt  package.xml
src_common/acin_gateway/config/: parameters.yaml
src_common/acin_gateway/launch/: gateway.launch
src_common/acin_gateway/scripts/: trajectory_exporter
src_common/acin_gateway/src/: controller_gateway.cpp  sensor_gateway.cpp
src_common/acin_gui/: CMakeLists.txt  package.xml  plugin_description.xml
src_common/acin_gui/src/: object_reconstruction_panel.cpp  object_reconstruction_panel.h
src_common/acin_reconstruction/: CMakeLists.txt  package.xml
src_common/acin_reconstruction/config/: gazebo.yaml  marker.yaml  processing.yaml
src_common/acin_reconstruction/launch/: reconstruction.launch
src_common/acin_reconstruction/marker/: marker_board.blend  marker_board.dae  marker_board.py
src_common/acin_reconstruction/msg/: ScanList.msg
src_common/acin_reconstruction/src/: parameters.cpp  parameters.h  reconstruction_node.cpp
src_common/acin_reconstruction/srv/: BoundingBox.srv  Connect.srv  Export.srv  Load.srv  Modify.srv  MultiwayRegister.srv  Register.srv  Scan.srv  SetReference.srv  Transform.srv
src_common/acin_reconstruction/urdf/: marker_macro.xacro
src_common/acin_support/: CMakeLists.txt  package.xml
src_common/acin_support/launch/: gazebo.launch
src_common/acin_support/meshes/base/: EGC-120-3130-TB-KF-0H-GV_slide.dae  EGC-HD-160-1480-TB-0H-GK.dae  EGC-HD-160-1480-TB-0H-GK_slide.dae
src_common/acin_support/meshes/camera/: camera.dae  mounting.dae  mounting.skp
src_common/acin_support/meshes/frame/: EGC-120-3130-TB-KF-0H-GV.dae  EGC-TB-KF_motor_back.dae  EGC-TB-KF_motor_front.dae  frame.dae
src_common/acin_support/meshes/iiwa/: base_link.dae  link_1.dae  link_2.dae  link_3.dae  link_4.dae  link_5.dae  link_6.dae
src_common/acin_support/meshes/table/: cap_4x40x40.dae  profile_1220x160x40.dae  profile_952x40x40.dae
src_common/acin_support/res/: calibration.py  transformation.txt
src_common/acin_support/urdf/: base_macro.xacro  camera_macro.xacro  frame_macro.xacro  iiwa_macro.xacro  macros.xacro  main.xacro  mainbkcp.xacro  penholder.xacro  table_macro.xacro
src_common/acin_support/worlds/: empty.world
src_simulation/acin_benchmark/: CMakeLists.txt  package.xml  readme.txt
src_simulation/acin_benchmark/benchmarks/benchmark1/: benchmark1.db
src_simulation/acin_benchmark/benchmarks/benchmark2/: benchmark2.db
src_simulation/acin_benchmark/benchmarks/benchmark3/: benchmark3.db
src_simulation/acin_benchmark/benchmarks/benchmark4/: BiEST.csv  ProjEST.csv  RRT.csv  RRTConnect.csv  benchmark4.db
src_simulation/acin_benchmark/config/: config1.yaml  config2.yaml  config3.yaml  config4.yaml
src_simulation/acin_benchmark/launch/: benchmark.launch
src_simulation/acin_benchmark/scripts/: benchmark_sequence_optimizer
src_simulation/acin_objects/: CMakeLists.txt  package.xml
src_simulation/acin_objects/launch/: spawn_model.launch
src_simulation/acin_objects/urdf/: bowl.xacro  main.xacro  mustard_bottle.xacro  object_macro.xacro  power_drill.xacro
src_simulation/ros_acin_robot_control/: CMakeLists.txt  README.md  package.xml
src_simulation/ros_acin_robot_control/include/ros_acin_robot_control/: acin_controller_node.h  ros_acin_controller_node.h  util_control.h
src_simulation/ros_acin_robot_control/launch/: ros_acin_control.launch
src_simulation/ros_acin_robot_control/src/: ros_acin_controller_node.cpp
src_simulation/ros_acin_robot_support/: CMakeLists.txt  README.md  package.xml  setup.py
src_simulation/ros_acin_robot_support/include/ros_acin_robot_support/: acin_ctrl_UI.cpp  acin_ctrl_UI.h  ct_controller_twinCatServices_.h  ct_controller_twinCatServicesv0.h  import_Eigen.cpp  import_Eigen.h  ros_acin_robot_support.h
src_simulation/ros_acin_robot_support/include/ros_acin_robot_support/eigen_import_libs/: cassert  climits  sstream
src_simulation/ros_acin_robot_support/include/ros_acin_robot_support/interpolators/: ProMPInterpolator.h  jerk_hat_interpolation.h  pBSpline_interpolation.h  pBSpline_interpolation_old.h
src_simulation/ros_acin_robot_support/include/ros_acin_robot_support/interpolators/basis_fcn/: basis_fcn.h  sqexp.h
src_simulation/ros_acin_robot_support/include/ros_acin_robot_support/models/: evalC.cpp  evalC.h  evalG.cpp  evalG.h  evalJ.cpp  evalJ.h  evalJp.cpp  evalJp.h  evalM.cpp  evalM.h  evalT0E.cpp  evalT0E.h  robot_model.h
src_simulation/ros_acin_robot_support/include/ros_acin_robot_support/models/kukalbriiwa/: _evalC_.cpp  _evalG_.cpp  _evalJ_.cpp  _evalJp_.cpp  _evalM_.cpp  _evalT0E_.cpp  kukalbriiwa_robot_model.h  robot_params.h
src_simulation/ros_acin_robot_support/include/ros_acin_robot_support/models/kukalbriiwa_model/matlab/: conservative_forces.m  coriolis_matrix.m  geo_jacobian_endeffector.m  geo_jacobian_endeffector_p.m  gravitational_forces.m  hom_transform_endeffector.m  inertia_matrix.m  inverse_kinematics_analytic.m  param_kuka.m  param_kuka_lab.m  param_simscape.m  param_visual.m  unskew.m
src_simulation/ros_acin_robot_support/include/ros_acin_robot_support/models/kukalbriiwa_model/meshes/: Whiteboard.stl  link_0.stl  (+7 more)
src_simulation/ros_acin_robot_support/msg/: CoordAdj.msg  JointSpaceTraj.msg  Joints.msg  PoseState.msg  ProMP.msg  TaskSpaceTraj.msg  ToolParam.msg  acinSollPos.msg  acinTime.msg  basis_fcn.msg  calcTimeMeasurement.msg
src_simulation/ros_acin_robot_support/src/ros_acin_robot_support/: __init__.py
src_simulation/ros_acin_robot_support/src/ros_acin_robot_support/acin_robot_model/: acin_robot_model.py
(+158 files in other folders)
