<?xml version="1.0"?>
<package format="2">
  <name>acin_automation</name>
  <version>0.0.0</version>
  <description>The acin_automation package</description>

  <maintainer email="martin.fraunhofer@gmail.com">Martin Fraunhofer</maintainer>

  <license>BSD</license>
  <author email="martin.fraunhofer@gmail.com">Martin Fraunhofer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>acin_reconstruction</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>trajectory_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>acin_reconstruction</exec_depend>
</package>
