<?xml version="1.0"?>
<package format="2">
  <name>acin_gateway</name>
  <version>0.0.0</version>
  <description>The acin_gateway package</description>

  <maintainer email="martin.fraunhofer@gmail.com">Martin Fraunhofer</maintainer>

  <license>BSD</license>
  <author email="martin.fraunhofer@gmail.com">Martin Fraunhofer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>ros_acin_robot_support</build_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>control_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>ros_acin_robot_support</exec_depend>
</package>
