<package>
  <name>acin_gui</name>
  <version>1.0.0</version>
  <description>
     GUI for the acin_gui package.
  </description>
  <maintainer email="martin.fraunhofer@gmail.com">Martin Fraunhofer</maintainer>

  <license>BSD</license>
  <author email="martin.fraunhofer@gmail.com">Martin Fraunhofer</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>acin_reconstruction</build_depend>
  <build_depend>acin_automation</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>

  <run_depend>libqt5-core</run_depend>
  <run_depend>libqt5-gui</run_depend>
  <run_depend>libqt5-widgets</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>acin_reconstruction</run_depend>
  <run_depend>acin_automation</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf2</run_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
